error.txt
steering.cpp:180:6: error: redefinition of ‘void ArriveAndAlign::setSlowRadius(float)’
  180 | void ArriveAndAlign::setSlowRadius(float r) { arrive.setSlowRadius(r); }
      |      ^~~~~~~~~~~~~~
In file included from steering.cpp:1:
steering.h:149:10: note: ‘void ArriveAndAlign::setSlowRadius(float)’ previously defined here
  149 |     void setSlowRadius(float r) { arrive.setSlowRadius(r); } // Added
      |          ^~~~~~~~~~~~~
make: *** [Makefile:55: steering.o] Error 1
